Arrows Overriding the navbar-collapse resolved

--- a/css/style.css
+++ b/css/style.css
@@ -1647,7 +1647,7 @@
         left: 0;
         width: 100%;
         border-radius: 8px;
-        z-index: 1;
+        z-index: 2;
     }
 
     button.navbar-toggler {
